# my_salary

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/: db.py  main.py
api/users/: crud.py  dependencies.py  models.py  schemas.py  users.py  utils.py
migrations/: env.py
migrations/versions/: 6ff350369c1e_added_users_tables.py
tests/: conftest.py  test_users.py
